--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,10 +9,10 @@ jobs:
       -name: Make a new envfile
       uses: SpicyPizza/create-envfile@v1
       with:
-        envkey_POSTGRES_USER: "postgres"
-        envkey_POSTGRES_PASSWORD: "postgres"
-        envkey_POSTGRES_DB: "postgres"
-        envkey_DATABASE_URL: "postgresql://postgres:postgres@db-test:5432/students__tests"
+        envkey_POSTGRES_USER: ${{secrets.PG_USER}}
+        envkey_POSTGRES_PASSWORD: ${{secrets.PG_PW}}
+        envkey_POSTGRES_DB: ${{secrets.PG_DB}}
+        envkey_DATABASE_URL: ${{secrets.DB_URL}}
         file_name: .env.test
       -name: Run tests
       run: docker-compose -f docker-compose-tests.yml run node_app_pratica_github_actions-test npm run test 
